added the psudeo code from the review session, and cleaned up the HTML

--- a/index.html
+++ b/index.html
@@ -48,40 +48,49 @@
             </div>
         </div>
 
-        <div id="crystalButtons">
+        <div class="crystals-gems">
             <div class="col-md-12">
                 <h3 class="buttonHeader"> Crystal Button options</h3>
                 <div class="images-center">
                     <img src="assets/images/red-crystal.jpeg" style="width:100px; height:100px;">
-                    <button class="red-button"> Red Crystal</button>
+
                     <img src="assets/images/blue.jpg" style="width:100px; height:100px;">
-                    <button class="blue-button"> Blue Crystal</button>
+
                     <img src="assets/images/green.jpg" style="width:100px;  height:100px;">
-                    <button class="green-button"> Green Crystal</button>
+
                     <img src="assets/images/yellow.jpg" style="width:100px; height:100px;">
-                    <button class="yellow-button"> Yellow Crystal</button>
+
                 </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-md-6">
-                <h5> Target Number</h5>
-                <p>
-                </p>
-            </div>
-
-            <div class="col-md-6">
-                <h5> Wins and Losses </h5>
-                <p>
-                </p>
+        <div class="targetNumber">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5> The number to match: </h5>
+                    <p>
+                    </p>
+                </div>
             </div>
         </div>
-
-        <div class="col-md-12">
-            <div class="Score">
-            <h5> Your score</h5>    
-            <p></p>
+        <div class="winsAndLosses">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5> Wins </h5>
+                    <p> <span id="wins"></span>
+                        <br>
+                        <h5>Losses</h5>
+                        <span if="losses"></span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="yourScore">
+                    <h5> Your score</h5>
+                    <span id="yourScore"></span>
+                    <p></p>
+                </div>
             </div>
         </div>
     </div>
