--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             
             <div class="col-lg-3">
                 <div class="card">
-                    <div class="card-header text-center" id="lose">Losses</div>
-                    <div class="card-body text-center" id="losses">
+                    <div class="card-header text-center" id="losses">Losses</div>
+                    <div class="card-body text-center" id="lose">
                         
                     </div>
                 </div>
